Configuration profile page

--- a/src/app/layout/main_layout/layout.component.html
+++ b/src/app/layout/main_layout/layout.component.html
@@ -12,10 +12,9 @@
         <app-header></app-header>
   
         <div class="rounded-bottom-2 p-3 bg-dark overflow-scroll full-height-main-content">
-          <app-user></app-user>
-          <router-outlet></router-outlet>
+          <router-outlet name='aux'></router-outlet>
         </div>
   
       </div>
     </div>
-  </div>
+</div>
