--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -2,21 +2,21 @@
     <ul class="nav flex-column">
 
         <li class="nav-item">
-            <a class="nav-link d-flex align-items-center" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" >
+            <a class="nav-link d-flex align-items-center" routerLink="/layout" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
                 <i class="bi-house me-3 nav-icon"></i>
                 <div>Accueil</div>
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link d-flex align-items-center" routerLink="/search" routerLinkActive="active">
+            <a class="nav-link d-flex align-items-center" routerLink="/search(aux:profile)" routerLinkActive="active">
                 <i class="bi-search me-3 nav-icon"></i>
                 <div>Recherche</div>
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link d-flex align-items-center" routerLink="/search" routerLinkActive="active">
+            <a class="nav-link d-flex align-items-center" [routerLink]="['/layout', { outlets: { aux: ['profile'] } }]" routerLinkActive="active">
                 <i class="bi-person-lines-fill me-3 nav-icon"></i>
                 <div>Mon profil</div>
             </a>
