--- a/src/app/layout/register/register.component.html
+++ b/src/app/layout/register/register.component.html
@@ -83,12 +83,12 @@
 
                   <!-- Confirm password input -->
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input formControlName="confirmPassword" type="password" id="form3Example4" class="form-control" placeholder="Confirmer à nouveau le mot de passe" required/>
+                    <input formControlName="confirmPassword" type="password" id="form3Example4" class="form-control" placeholder="Confirmer à nouveau" required/>
                     <!-- <label class="form-label" for="form3Example4">Password</label> -->
                     @if(registerForm.get('confirmPassword')?.invalid && (registerForm.get('confirmPassword')?.dirty || registerForm.get('confirmPassword')?.touched)) {
                       @if(registerForm.get('confirmPassword')?.hasError('notSame')) {
                           <span>Veuillez confirmer le mot de passe</span>
-                      }
+                    }
                   }
                   </div>
     
